@@ -25,64 +25,65 @@ tcost = [0, 0.00005]  # transaction cost
 
 
 class MomVectBacktest(object):
-    def __init__(self, symbol, start, end, amount, tc):
-        self.symbol = symbol
-        self.start = start  # start date
-        self.end = end  # end date
-        self.amount = amount  # amount to be invested initially
-        self.tc = tc  # transaction costs
-        self.results = None
-        self.get_data()
+	def __init__(self, symbol, start, end, amount, tc):
+		self.symbol = symbol
+		self.start = start # start date
+		self.end = end # end date
+		self.amount = amount # amount to be invested initially
+		self.tc = tc # transaction costs
+		self.results = None
+		self.get_data()
 
-    def get_data(self):  # fetching data, this uses yahoo data, but we may use other
-        raw = web.DataReader(self.symbol, data_source='yahoo', start=self.start, end=self.end)['Adj Close']
-        raw = pd.DataFrame(raw)
-        raw.rename(columns={'Adj Close': 'price'}, inplace=True)
-        raw['return'] = np.log(raw / raw.shift(1))
-        np.sign(raw['return'])  # get the position
-        self.data = raw  # get raw data
+	def get_data(self): #fetching data, this uses yahoo data, but we may use other
+		# will add Oanda data here, use data['ask.o']
+		
+		raw = web.DataReader(self.symbol, data_source='yahoo',start=self.start, end=self.end)['Adj Close']
+		raw = pd.DataFrame(raw)
+		raw.rename(columns={'Adj Close': 'price'}, inplace=True)
+		raw['return'] = np.log(raw/raw.shift(1))
+		np.sign(raw['return']) # get the position
+		self.data = raw # get raw data
 
-    def run_strategy(self, momentum=1):
-        self.momentum = momentum
-        data = self.data.copy()
-        data['position'] = np.sign(
-            data['return'].rolling(momentum).mean())  # generate position dataframe by rolling data points
-        data['strategy'] = data['position'].shift(1) * data['return']
-        # determine when a trade takes place
-        trades = data['position'].diff().fillna(0) != 0
-        # subtract transaction costs from return when trade takes place
-        data['strategy'][trades] -= self.tc
-        data['creturns'] = self.amount * data['return'].cumsum().apply(np.exp)
-        data['cstrategy'] = self.amount * data['strategy'].cumsum().apply(np.exp)
-        self.results = data
-        # absolute performance of the strategy
-        aperf = self.results['cstrategy'].ix[-1]
-        # out-/underperformance of strategy
-        operf = aperf - self.results['creturns'].ix[-1]
-        return round(aperf, 2), round(operf, 2), round(stat.hurst(data['price']), 4), round(self.MDD(data['cstrategy']),
-                                                                                            4)
+	def run_strategy(self, momentum = 1):
+		self.momentum = momentum
+		data = self.data.copy()
+		data['position'] = np.sign(data['return'].rolling(momentum).mean()) # generate position dataframe by rolling data points
+		data['strategy'] = data['position'].shift(1)*data['return']
+		# determine when a trade takes place
+		trades = data['position'].diff().fillna(0) != 0
+		# subtract transaction costs from return when trade takes place
+		data['strategy'][trades] -= self.tc
+		data['creturns'] = self.amount * data['return'].cumsum().apply(np.exp)
+		data['cstrategy'] = self.amount * data['strategy'].cumsum().apply(np.exp)
+		self.results = data
+		# absolute performance of the strategy
+		aperf = self.results['cstrategy'].ix[-1]
+		# out-/underperformance of strategy
+		operf = aperf - self.results['creturns'].ix[-1]
+		return round(aperf, 2), round(operf, 2), round(stat.hurst(data['price']), 4), round(self.MDD(data['cstrategy']), 4)
 
-    def MDD(self, data):  # calculating maximum drawdown
-        MDD = 0
-        peak = self.amount
-        trough = self.amount
+	def MDD(self, data): # calculating maximum drawdown
+		MDD = 0
+		peak = self.amount
+		trough = self.amount
 
-        for i in range(len(data)):
-            if (peak < data[i]):
-                peak = data[i]
-                trough = data[i]
-            elif (trough > data[i]):
-                trough = data[i]
+		for i in range(len(data)):
+			if (peak < data[i]):
+				peak = data[i]
+				trough = data[i]
+			elif (trough > data[i]):
+				trough = data[i]
 
-            MDD = min(MDD, (trough - peak) / peak)
-        return MDD
+			MDD = min(MDD, (trough-peak)/peak)
+		return MDD
 
-    def plot_results(self):
-        if self.results is None:
-            print('No result to plot yet')
-        title = '%s | TC = %.5f' % (self.symbol, self.tc)
-        self.results[['creturns', 'cstrategy']].plot(title=title, figsize=(10, 6))
-        plt.show()
+	def plot_results(self):
+		if self.results is None:
+			print('No result to plot yet')
+		title = '%s | TC = %.5f' % (self.symbol, self.tc)
+		self.results[['creturns','cstrategy']].plot(title=title,figsize=(10,6))
+		plt.show()
+>>>>>>> unfinished works
 
 
 if __name__ == '__main__':
